--- a/garbage/index.html
+++ b/garbage/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is my issue1  Title 2 c-4 </title>
+    <title>This is my issue1  Title 3 C-5 </title>
 </head>
 <body>
     
